--- a/DotNetCore/src/AspNetCoreNodeApp/wwwroot/swagger/ui/index.html
+++ b/DotNetCore/src/AspNetCoreNodeApp/wwwroot/swagger/ui/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>乐舱网API</title>
-    <link rel="icon" type="image/png" href="images/favicon-32x32.icon" sizes="32x32" />
-    <link rel="icon" type="image/png" href="images/favicon-16x16.icon" sizes="16x16" />
+    <link rel="icon" type="image/png" href="images/favicon-32x32.ico" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/favicon-16x16.ico" sizes="16x16" />
     <link href='css/typography.css' media='screen' rel='stylesheet' type='text/css' />
     <link href='css/reset.css' media='screen' rel='stylesheet' type='text/css' />
     <link href='css/screen.css' media='screen' rel='stylesheet' type='text/css' />
