--- a/Angular2/TestAngular/src/index.html
+++ b/Angular2/TestAngular/src/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>TestAngular</title>
+  <title>TestAngular</title>  
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="assets/jquery/jquery-1.8.2.min.js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="assets/material/css/materialize.css">
-
+  <link rel="stylesheet" href="assets/material/css/materialize.css"> 
 </head>
-<body>
+<body>   
+  <div id="title" class="title"></div>
   <app-root>Loading...</app-root>
 </body>
 </html>
