方法和泛型

--- a/TypeScript/index.html
+++ b/TypeScript/index.html
@@ -3,16 +3,19 @@
 <head>
     <title>TypeScript</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
-    
-    <script>
-      System.import('app').catch(function(err){ console.error(err); });
-    </script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">      
+ 
 </head>
 <!-- 3. Display the application -->
 
 <body>   
-    <script src="app/class/greeter.js"></script>
+    <!--<script src="app/class/greeter.js"></script>-->
+    <!--<script src="app/class/animal.js"></script>
+    <script src="app/class/employee.js"></script>
+    <script src="app/class/grid.js"></script>
+    <script src="app/class/department.js"></script>-->
+    <!--<script src="app/function/buildname.js"></script>-->
+    <script src="app/泛型/identity.js"></script>
 </body>
 
 </html>
